[gd_scene load_steps=12 format=2]

[ext_resource path="res://Fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Textures/metal-background.jpg" type="Texture" id=2]
[ext_resource path="res://Script/SceneManagers/GameRoomHostManager.gd" type="Script" id=3]
[ext_resource path="res://Themes/LobbyTheme.tres" type="Theme" id=4]
[ext_resource path="res://Script/SceneManagers/Lobby/TeamName.gd" type="Script" id=5]
[ext_resource path="res://Textures/back-arrow.png" type="Texture" id=7]


[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.764706, 0.764706, 0.764706, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 12
border_width_bottom = 12
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.227451, 0.227451, 0.227451, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 12
border_width_bottom = 12
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 10
border_width_top = 10
border_width_right = 12
border_width_bottom = 12
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="DynamicFont" id=5]
size = 39
font_data = ExtResource( 1 )

[node name="CreateGameRoomHost" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_top = -0.000416876
anchor_right = 1.0
anchor_bottom = 0.999583
margin_top = 0.450226
margin_bottom = 0.450317
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -457.5
margin_top = 200.0
margin_right = 457.5
margin_bottom = 126.0
custom_fonts/font = SubResource( 1 )
text = "Game Room Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 1070.0
margin_bottom = 1070.0
rect_scale = Vector2( 0.12, 0.12 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
icon = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGameButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -340.452
margin_top = -300.0
margin_right = 337.548
margin_bottom = -200.0
custom_fonts/font = SubResource( 5 )
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Players" type="Panel" parent="."]
margin_left = 620.0
margin_top = 325.0
margin_right = 1298.0
margin_bottom = 719.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Players"]
margin_left = 150.0
margin_top = 20.0
margin_right = 485.0
margin_bottom = 51.0
text = "Waiting for players..."

[node name="List" type="ItemList" parent="Players"]
margin_left = 150.0
margin_top = 51.0
margin_right = 485.0
margin_bottom = 373.0

[node name="SealButton" type="Button" parent="."]
margin_left = 1310.0
margin_top = 325.0
margin_right = 1473.0
margin_bottom = 377.0
text = "Close room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Team" type="Label" parent="."]
margin_left = 1310.0
margin_top = 385.0
margin_right = 1452.0
margin_bottom = 416.0
text = "Team name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TeamName" type="TextEdit" parent="Team"]
margin_left = 3.37048
margin_top = 31.2608
margin_right = 315.37
margin_bottom = 78.2608
text = "Bomb Squad"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1310.0
margin_top = 475.0
margin_right = 1422.0
margin_bottom = 506.0
text = "Difficulty:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Label"]
margin_top = 35.0
margin_right = 154.0
margin_bottom = 77.0
text = "Easy"
items = [ "Easy", null, false, 0, null, "Medium", null, false, 1, null, "Hard", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Microphone" type="CheckButton" parent="."]
margin_left = 1313.0
margin_top = 572.0
margin_right = 1460.0
margin_bottom = 615.0
pressed = true
text = "Microphone:"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="SealButton" to="." method="_on_SealButton_pressed"]
[connection signal="text_changed" from="Team/TeamName" to="Team/TeamName" method="_on_TeamName_text_changed"]
[connection signal="item_selected" from="Label/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="toggled" from="Microphone" to="." method="_on_Microphone_toggled"]
